tests/neg-macros/annot-TastyAnnotation-direct.check
-- [E042] Type Error: tests/neg-macros/annot-TastyAnnotation-direct.scala:3:0 ------------------------------------------
3 |@TastyAnnotation // error
  |^^^^^^^^^^^^^^^^
  |TastyAnnotation is a trait; it cannot be instantiated
  |
  | longer explanation available when compiling with `-explain`
