tests/neg-macros/annot-TastyAnnotation-direct.scala
import scala.annotation.TastyAnnotation

@TastyAnnotation // error
def test = ()
